# dftbplus

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  README.rst  SPECIFICATION.md  TODO.md  config.cmake  fortitude.toml  fortranStyleGuide.rst  testlog.txt
.github/workflows/: build.yml  lint.yml
app/: CMakeLists.txt
app/dftb+/: dftbplus.F90
app/libwavegrid/: CMakeLists.txt  gridcache.F90  libwavegrid.F90  slater.F90
app/libwavegrid/molorb/: .clang-format  CMakeLists.txt  kernel.cu  kernel.cuh  molorb.F90  offloaded.F90  parallel.F90  pointwise.F90  slater.cuh  spharmonics.F90  spharmonics.cuh  todo.txt  types.F90  utils.cuh
app/libwavegrid/molorb/cuda/: .clang-format  device_params.cuh  host_logic.cu  host_logic.cuh  kernel.cu  kernel_sig.cuh  slater.cuh  spharmonics.cuh  utils.cuh
app/misc/skderivs/: skderivs.F90
app/misc/slakovalue/: integvalue.F90  polyvalue.F90  splvalue.F90
app/misc/units/: printunits.F90
app/modes/: initmodes.F90  modeprojection.F90  modes.F90
app/phonons/: initphonons.F90  libnegfint.F90  phonons.F90
app/transporttools/: buildwire.f90  flux.f90  helpsetupgeom.F90  inputdata.F90  makecube.f90  parser.F90  setupgeom.F90
app/waveplot/: CMakeLists.txt  gridcache.F90  initwaveplot.F90  molorb.F90  molorb2.F90  results.txt  slater.F90  waveplot.F90
app/waveplot/molorb/: CMakeLists.txt  cached.F90  interface.F90  interface.cpp  kernel.cu  kernel.cuh  molorb.F90  parallel.F90  parallel.bak  pointwise.F90  presplit.f90  results.txt
benchmark/: benchmark.sh  large-first-dev.json  medium-first-dev.json  small-first-dev.json
benchmark/decompile/: molorb2.cpp  molorb2.optimized  molorb2.original
benchmark/large/dftb/: detailed.xml  dftb_in.hsd
benchmark/medium/: waveplot_in.hsd
benchmark/medium/dftb/: dftb_in.hsd  geo_end.gen
benchmark/results/: large-main-prod.json  large-main-release.json  large-newCutoffs-release.json  medium-main-prod.json  medium-main-release.json  medium-newCutoffs-release.json  small-main-prod.json  small-main-release.json  small-newCutoffs-release.json
benchmark/scaling/: gather_data.py  results.json  waveplot_in.hsd
benchmark/scaling/dftb/: dftb_in.hsd
benchmark/single/: waveplot_in.hsd  waveplot_pin.hsd
benchmark/single/dftb/: dftb_in.hsd
benchmark/small/dftb/: dftb_in.hsd
compare/: compareV3.py  requirements.txt  subdivision_factor.hsd  viewcube.py  visualiseV2.py  waveplot_in.hsd
compare/inp/C18H12/: dftb_in.hsd
compare/inp/C40/: dftb_in.hsd
compare/inp/C60/: detailed.xml
compare/inp/CONH/: detailed.xml
compare/inp/H/: detailed.xml  dftb_in.hsd
compare/inp/H-chain/: detailed.out  detailed.xml  dftb_in.hsd
compare/orig_inp/C18H12/: detailed.xml
compare/orig_inp/C60/: dftb_in.hsd
compare/orig_inp/CONH/: dftb_in.hsd
compare/orig_inp/H/: geometry.gen
compare/orig_inp/H2O/: detailed.xml  dftb_in.hsd  geometry.gen
compare/tools/: benchmark.py  cubelib.py  shift.py  view.py  visualiseOld.py
compare/tools/misc/: aligned_waveplot_in.hsd
doc/dftb+/ford/: dftbplus-project-file.md
src/dftbp/: CMakeLists.txt
src/dftbp/common/: accuracy.F90  assert.F90  atomicmass.F90  atomicrad.F90  blacsenv.F90  coherence.F90  constants.F90  envcheck.F90  environment.F90  file.F90  filesystem.F90  globalenv.F90  gpuenv.F90  hamiltoniantypes.F90  matrixappend.F90  memman.F90  mpienv.F90  optarg.F90  release.F90  schedule.F90  status.F90  timer.F90  timerarray.F90  unitconversion.F90  version.F90
src/dftbp/derivs/: fermihelper.F90  linearresponse.F90  numderivs2.F90  perturb.F90  rotatedegen.F90
src/dftbp/dftb/: blockpothelper.F90  bondpopulations.F90  boundarycond.F90  chargepenalty.F90  charges.F90  coordnumber.F90  coulomb.F90  dense.F90  densitymatrix.F90  determinants.F90  dftbplusu.F90  dftd3param.F90  dftd4param.F90  dispcommon.F90  dispdftd4.F90  dispersions.F90  dispiface.F90  dispmbd.F90  dispslaterkirkw.F90  dispuff.F90  dispuffdata.F90  elecconstraints.F90  elstatpot.F90  emfields.F90  encharges.F90  energytypes.F90  etemp.F90  extcharges.F90  extfields.F90  forces.F90  getenergies.F90  h5correction.F90  halogenx.F90  hamiltonian.F90  hybridxc.F90  mdftb.F90  nonscc.F90  onscorrection.F90  orbitalequiv.F90  periodic.F90  (+20 more)
src/dftbp/dftbplus/: CMakeLists.txt  apicallback.F90  eigenvects.F90  elstattypes.F90  forcetypes.F90  hsdhelpers.F90  initprogram.F90  inputconversion.F90  inputdata.F90  main.F90  mainapi.F90  mainio.F90  oldcompat.F90  outputfiles.F90  parser.F90  parser_analysis.F90  parser_customisation.F90  parser_dispersion.F90  parser_driver.F90  parser_electrostatics.F90  parser_excited.F90  parser_external.F90  parser_filling.F90  parser_general.F90  parser_geometry.F90  parser_hamiltonian.F90  parser_hybrid.F90  parser_kpoints.F90  parser_parallel.F90  parser_parseroptions.F90  parser_reks.F90  parser_sccoptions.F90  parser_shared_utils.F90  parser_skfiles.F90  parser_solver.F90  parser_spin.F90  parser_transport.F90  qdepextpotgen.F90  qdepextpotproxy.F90  specieslist.F90  (+1 more)
src/dftbp/dftbplus/input/: fileaccess.F90  geoopt.F90
src/dftbp/elecsolvers/: dmsolvertypes.F90  elecsolvers.F90  elecsolvertypes.F90  elsicsc.F90  elsisolver.F90
src/dftbp/extlibs/: CMakeLists.txt  elsiiface.F90  hsd.F90  hsddata.F90  lebedev.F90  tblite.F90
src/dftbp/geometry/: projectvectors.F90
src/dftbp/geoopt/: conjgrad.F90  filter.F90  fire.F90  gdiis.F90  geoopt.F90  lbfgs.F90  lbfgs2.F90  linemin.F90  optimizer.F90  package.F90  rationalfunc.F90  steepdesc.F90
src/dftbp/include/: allocatablelist.fypp  common.fypp  error.fypp
src/dftbp/io/: CMakeLists.txt  charmanip.F90  commonformats.F90  formatout.F90  hsdcompat.F90  (+16 more)
src/dftbp/wavegrid/: CMakeLists.txt  Readme.md  slater.F90  wavegrid.F90
src/dftbp/wavegrid/basis/: CMakeLists.txt  basis.F90  gaussian.F90  lut.F90  orbital.F90  slater.F90  spharmonics.F90
src/dftbp/wavegrid/molorb/: molorb.F90  offloaded.F90  parallel.F90  spharmonics.F90
src/dftbp/wavegrid/molorb/cuda/: device_params.cuh  kernel.cuh
sys/: gnu.cmake
test/app/: CMakeLists.txt
utils/export/: dftbplus-config.cmake.in
(+171 files in other folders)
